--- a/AC Career Mode/controls/OwnedCarsLV.xaml
+++ b/AC Career Mode/controls/OwnedCarsLV.xaml
@@ -8,10 +8,17 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <ListBox x:Name="lv_Cars" ItemsSource="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=Cars}"
-                 d:ItemsSource="{d:SampleData ItemCount=5}" HorizontalContentAlignment="Stretch">
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                 HorizontalContentAlignment="Stretch" 
+                 Grid.RowSpan="2" 
+                 d:ItemsSource="{d:SampleData ItemCount=5}">
+            
+            
             <ListBox.Resources>
                 <DataTemplate x:Key="CarTemplate" >
-                    <local:OwnedCarItem Drivers="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=Drivers}" CarName="{Binding Name}" />
+                    <local:OwnedCarItem Drivers="{Binding RelativeSource={RelativeSource AncestorType=UserControl}, Path=Drivers}"
+                                        car="{Binding}"
+                                        ButtonContent="Sell" />
                 </DataTemplate>
             </ListBox.Resources>
             <ListBox.ItemTemplate>
